@@ -1,0 +1,4 @@
+---
+call: CreateLogGroup
+service: CloudWatchLogs
+tests: []
