@@ -6,6 +6,8 @@
    to get the already parsed information
  - Refactoring in the different callers to move functionalities only where needed
  - SQS Maps are now working correctly (QueueMaps were ill defined). Thanks to codehead
+ - Fix bug for JSONCaller: when response doesn't have a body, the operation would succeed, but an
+   invalid json string exception was thrown
 
 0.08 19 May 2015 22:12:00
  - EC2 SpotFleet API calls
